# mirobotics_services

./: README.md
mirobotics_msg/: CMakeLists.txt  package.xml
mirobotics_msg/action/: GenerateScene.action  PlanAndExecute.action
mirobotics_msg/srv/: CaptureScene.srv  EvalScene.srv  PlanPath.srv  eval_scene.srv  plan_path.srv
mirobotics_orchestrator_ur/: package.xml  setup.cfg  setup.py
mirobotics_orchestrator_ur/launch/: mirobotics_orchestrator_ur.launch.py
mirobotics_orchestrator_ur/mirobotics_orchestrator_ur/: moveit_execution.py  orchestrator_ur_server.py  ray_casting.py
mirobotics_path_planner/: package.xml  setup.cfg  setup.py
mirobotics_path_planner/launch/: mirobotics_path_planner.launch.py
mirobotics_path_planner/mirobotics_path_planner/: astar_3d.py  path_planner_server.py
mirobotics_scene_eval/: package.xml  setup.cfg  setup.py
mirobotics_scene_eval/launch/: mirobotics_scene_eval.launch.py
mirobotics_scene_eval/mirobotics_scene_eval/: scene_eval_server.py
mirobotics_superior/: package.xml  setup.cfg  setup.py
